--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>17 янв: <DD><a href="/catalog/cat376.shtml" title="Расширен ассортимент"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
   <DT>16 янв: <DD><a href="/catalog/cat175.shtml" title="Цена снижена"><span class="title">Пена монтажная</span><span class="dop"> Profpur Ice</span></a><br>
   <DT>16 янв: <DD><a href="/catalog/cat191.shtml" title="Новый товар"><span class="title">Пистолет для пены</span><span class="dop"> Сибртех</span></a><br>
   <DT>12 дек: <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"> ULF</span></a><br>
@@ -11,6 +12,18 @@
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/foam/big/profpur_01-02-09.jpg"><img
+        src="/img/pic/foam/small/profpur_01-02-09_64.jpg" width="92" style="border: 1px solid #ddd; padding: 2px"
+        title="Большое фото: Пистолетная монтажная пена PROFPUR Ice ЗИМНЯЯ"></a></td>
+      <td class="good-txt"><a href="/catalog/cat175.shtml"
+        title="Пистолетная монтажная пена PROFPUR Ice ЗИМНЯЯ на нашем сайте"><p><span
+        class="title">Пистолетная монтажная пена</span><span
+        class="dop"> PROFPUR Ice</span><br><span
+        class="addt"><strong>ЗИМНЯЯ</strong></span></p></a>
+  </table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
