--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 янв: <DD><a href="/catalog/cat154.shtml" title="Новые товары"><span class="title">Тёрки для швов</span><span class="dop"> HARDY</span></a><br>
   <DT>17 янв: <DD><a href="/catalog/cat376.shtml" title="Расширен ассортимент"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
   <DT>16 янв: <DD><a href="/catalog/cat175.shtml" title="Цена снижена"><span class="title">Пена монтажная</span><span class="dop"> Profpur Ice</span></a><br>
   <DT>16 янв: <DD><a href="/catalog/cat191.shtml" title="Новый товар"><span class="title">Пистолет для пены</span><span class="dop"> Сибртех</span></a><br>
