--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,9 @@
+<DT>12 дек: <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"> ULF</span></a><br>
+<DT>09 дек: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пена монтажная</span><span class="dop"> Profpur Extra</span></a><br>
+<DT>08 дек: <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
+<DT>28 ноя: <DD><a href="/catalog/cat175.shtml" title="Цена снижена"><span class="title">Пена монтажная</span><span class="dop"> Profpur mega</span></a><br>
+<DT>14 ноя: <DD><a href="/catalog/cat500.shtml" title="Новый товар"><span class="title">Добавка противоморозная</span><span class="dop"></span></a><br>
+<DT>08 ноя: <DD><a href="/catalog/cat203.shtml" title="Новые товары"><span class="title">Лопаты снеговые 3-бортные</span><span class="dop"></span></a><br>
 <DT>10 ноя: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтажная пена</span><span class="dop"> Profpur Ice</span></a><br>
 <DT>17 окт: <DD><a href="/catalog/cat70.shtml"  title="Расширен ассортимент"><span class="title">Валики</span><span class="dop"> Gepardakryl (HARDY)</span></a><br>
 <DT>15 окт: <DD><a href="/catalog/cat478.shtml" title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> ГРЕН</span></a><br>
