--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,15 +1,16 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>02 фев: <DD><a href="/catalog/cat109.shtml" title="Цены снижены"><span class="title">Маркеры промышленные</span><span class="dop"></span></a><br>
+  <DT>01 фев: <DD><a href="/catalog/cat299.shtml" title="Новые товары"><span class="title">Свёрла по металлу</span><span class="dop"> Bohrer P6M5</span></a><br>
+  <DT>01 фев: <DD><a href="/catalog/cat72.shtml"  title="Новые товары"><span class="title">Строительные рулетки</span><span class="dop"> Bohrer</span></a><br>
+  <DT>31 янв: <DD><a href="/catalog/cat234.shtml" title="Цена снижена"><span class="title">Бензопила</span></a>,
+    <a href="/catalog/cat199.shtml" title="Цена снижена"><span class="title">перфоратор</span></a>
+    <a href="/catalog/cat431.shtml" title="а еще и на миксер цена снижена"><span class="dop">Elitech</span></a><br>
+  <DT>31 янв: <DD><a href="/catalog/cat198.shtml" title="Новый товар"><span class="title">УШМ</span><span class="dop"> Elitech 1012</span> (болгарка)</a><br>
   <DT>27 янв: <DD><a href="/catalog/cat154.shtml" title="Новые товары"><span class="title">Тёрки для швов</span><span class="dop"> HARDY</span></a><br>
   <DT>17 янв: <DD><a href="/catalog/cat376.shtml" title="Расширен ассортимент"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
   <DT>16 янв: <DD><a href="/catalog/cat175.shtml" title="Цена снижена"><span class="title">Пена монтажная</span><span class="dop"> Profpur Ice</span></a><br>
   <DT>16 янв: <DD><a href="/catalog/cat191.shtml" title="Новый товар"><span class="title">Пистолет для пены</span><span class="dop"> Сибртех</span></a><br>
-  <DT>12 дек: <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"> ULF</span></a><br>
-  <DT>09 дек: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пена монтажная</span><span class="dop"> Profpur Extra</span></a><br>
-  <DT>08 дек: <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
-  <DT>28 ноя: <DD><a href="/catalog/cat175.shtml" title="Цена снижена"><span class="title">Пена монтажная</span><span class="dop"> Profpur mega</span></a><br>
-  <DT>14 ноя: <DD><a href="/catalog/cat500.shtml" title="Новый товар"><span class="title">Добавка противоморозная</span><span class="dop"></span></a><br>
-  <DT>08 ноя: <DD><a href="/catalog/cat203.shtml" title="Новые товары"><span class="title">Лопаты снеговые 3-бортные</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
