--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -6,8 +6,9 @@
 </span></p><UL><LI>Д<LI>В</UL><p><span class="addt">
 <DL><DT>П:<DD>0<DT>О:<DD>0</DL>
 </span></p><UL><LI>.</UL><p><span class="addt">
- <span class=art>арт. </span>
-<b>Цена за упаковку 10 штук.</b>
+ <span class="art">арт. </span>
+<span class="for"></span>
+<br><b>Цена за упаковку 10 штук.</b>
 <abbr title="м">П</abbr>
 <table cellpadding=0 cellspacing=0 border=0><tr><td>красный<td class=art>арт. 2</table>
 {obj_fld}{51}{42}
