--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,6 @@
+<DT>17 янв: <DD><a href="/catalog/cat376.shtml" title="Расширен ассортимент"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
+<DT>16 янв: <DD><a href="/catalog/cat175.shtml" title="Цена снижена"><span class="title">Пена монтажная</span><span class="dop"> Profpur Ice</span></a><br>
+<DT>16 янв: <DD><a href="/catalog/cat191.shtml" title="Новый товар"><span class="title">Пистолет для пены</span><span class="dop"> Сибртех</span></a><br>
 <DT>12 дек: <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"> ULF</span></a><br>
 <DT>09 дек: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пена монтажная</span><span class="dop"> Profpur Extra</span></a><br>
 <DT>08 дек: <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
