--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -7,7 +7,7 @@
 <DL><DT>П:<DD>0<DT>О:<DD>0</DL>
 </span></p><UL><LI>.</UL><p><span class="addt">
  <span class="art">арт. </span>
-<span class="for"></span>
+</span><span class="for">
 <br><b>Цена за упаковку 10 штук.</b>
 <abbr title="м">П</abbr>
 <table cellpadding=0 cellspacing=0 border=0><tr><td>красный<td class=art>арт. 2</table>
@@ -31,6 +31,24 @@
 <p><b>РАСПРОДАЖА кистей плоских!</b></p>
 РАСПРОДАЖА 1
 ==============================
+<div class="refbanner"><a href="cat203.shtml"><table><tr><td class="refbantab"><table cellpadding="4">
+  <tr class="hdr"><td colspan="4">а также: Снегоуборочный инвентарь</td></tr><tr>
+  <td
+    ><img src="/img/pic/strhoz/small/LOPATA SNEG ALLUMINIJ.jpg"
+    ><img src="/img/pic/strhoz/small/ZV01.jpg"
+    ><img src="/img/pic/strhoz/small/ZV02.png"
+  ></td>
+  <td><img src="/img/pic/strhoz/small/dvij0.jpg"></td>
+  <td><img src="/img/pic/strhoz/small/LEDORUB TOPOR.jpg"></td>
+  <td><img src="/img/pic/strhoz/small/LEDORUB SKREBOK.jpg"></td>
+</tr><tr class="sub">
+  <td>Лопаты снеговые и уборочные</td>
+  <td>Движки для снега</td>
+  <td>Ледорубы</td>
+  <td>Скребки</td>
+</tr>
+</table></td></tr></table></a></div>
+  ==============================
 
 <LI>Имеется <a href="pdf" target=_blank title="Документ PDF">руководство по эксплуатации</a>.</LI>
 <br>Имеется <a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank title="Документ PDF">сертификат пожарной безопасности</a>.</span></p></td><td align=center><a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank><img style="border:none" src=/img/pic/foam/small/Cert_Profpur.JPG title="Картинка: Сертификат пожарной безопасности"></a><p><span>
@@ -258,6 +276,5 @@ qq qqq &ensp;
 <a href="q"></a>
 &nbsp2; &n co &mdash; z
 "Windows socket error" WSAECONNREFUSED
-</span><span class="for">
 
 
