Проволока сварочная омедненная| марки G3Si1 пр-ва PlasmaTec

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,8 @@
+<DT>31 янв: <DD><a href="/catalog/cat234.shtml" title="Цена снижена"><span class="title">Бензопила</span></a>,
+  <a href="/catalog/cat199.shtml" title="Цена снижена"><span class="title">перфоратор</span></a>
+  <a href="/catalog/cat431.shtml" title="а еще и на миксер цена снижена"><span class="dop">Elitech</span></a><br>
+<DT>31 янв: <DD><a href="/catalog/cat198.shtml" title="Новый товар"><span class="title">УШМ</span><span class="dop"> Elitech 1012</span> (болгарка)</a><br>
+<DT>27 янв: <DD><a href="/catalog/cat154.shtml" title="Новые товары"><span class="title">Тёрки для швов</span><span class="dop"> HARDY</span></a><br>
 <DT>17 янв: <DD><a href="/catalog/cat376.shtml" title="Расширен ассортимент"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
 <DT>16 янв: <DD><a href="/catalog/cat175.shtml" title="Цена снижена"><span class="title">Пена монтажная</span><span class="dop"> Profpur Ice</span></a><br>
 <DT>16 янв: <DD><a href="/catalog/cat191.shtml" title="Новый товар"><span class="title">Пистолет для пены</span><span class="dop"> Сибртех</span></a><br>
