--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,10 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 фев: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Клейкая лента</span></a>, <a href="/catalog/cat153.shtml" title="Расширен ассортимент"><span class="title">Кельмы</span></a><span class="dop"> HARDY</span><br>
+  <DT>20 фев: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Крестики для плитки</span><span class="dop"> HARDY</span></a><br>
+  <DT>17 фев: <DD><a href="/catalog/cat228.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Тех. ткани и ветошь</span></a>; <a href="/catalog/cat186.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Веревка</span></a><br>
+  <DT>17 фев: <DD><a href="/catalog/cat105.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
+  <DT>16 фев: <DD><a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы по дереву</span><span class="dop"> и т. п.</span></a><br>
   <DT>15 фев: <DD><a href="/catalog/cat546.shtml" title="Новый товар"><span class="title">Краска для металла</span><span class="dop"> "Panzer"</span></a><br>
   <DT>14 фев: <DD><a href="/catalog/cat212.shtml" title="Расширен ассортимент"><span class="title">Уровни</span><span class="dop"> HARDY (Польша)</span></a><br>
   <DT>14 фев: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
@@ -8,11 +13,6 @@
   <DT>02 фев: <DD><a href="/catalog/cat109.shtml" title="Цены снижены"><span class="title">Маркеры промышленные</span><span class="dop"></span></a><br>
   <DT>01 фев: <DD><a href="/catalog/cat299.shtml" title="Новые товары"><span class="title">Свёрла по металлу</span><span class="dop"> Bohrer P6M5</span></a><br>
   <DT>01 фев: <DD><a href="/catalog/cat72.shtml"  title="Новые товары"><span class="title">Строительные рулетки</span><span class="dop"> Bohrer</span></a><br>
-  <DT>31 янв: <DD><a href="/catalog/cat234.shtml" title="Цена снижена"><span class="title">Бензопила</span></a>,
-    <a href="/catalog/cat199.shtml" title="Цена снижена"><span class="title">перфоратор</span></a>
-    <a href="/catalog/cat431.shtml" title="а еще и на миксер цена снижена"><span class="dop">Elitech</span></a><br>
-  <DT>31 янв: <DD><a href="/catalog/cat198.shtml" title="Новый товар"><span class="title">УШМ</span><span class="dop"> Elitech 1012</span> (болгарка)</a><br>
-  <DT>27 янв: <DD><a href="/catalog/cat154.shtml" title="Новые товары"><span class="title">Тёрки для швов</span><span class="dop"> HARDY</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
