--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -4,7 +4,7 @@
 
 </span></p><UL><LI>Р<LI>Э<LI>Д<LI>В</UL><DL><DT>Потребляемая мощность:<DD>0 Вт<DT>О:<DD>0<DT>Ч:<DD>0<DT>Д:<DD>1<DT>П:<DD>З<DT>Вес:<DD>1 кг</DL><p><span class="addt">||/img/pic/e/small/jpg|/img/pic/e/big/
 </span></p><UL><LI>Д<LI>В</UL><p><span class="addt">
-<DL><DT>П:<DD>0<DT>О:<DD>0</DL>
+<DL style="max-width: 25em"><DT>П:<DD>0<DT>О:<DD>0</DL>
 </span></p><UL><LI>.</UL><p><span class="addt">
  <span class="art">арт. </span>
 </span><span class="for">
