--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 мар: <DD><a href="/catalog/cat541.shtml" title="Цены снижены"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
+  <DT>02 мар: <DD><a href="/catalog/cat177.shtml" title="Новые товары"><span class="title">Изолента</span></a> и <a href="/catalog/cat552.shtml" title="Новый товар"><span class="title">размет. шнур</span></a><span class="dop"> HARDY</span><br>
+  <DT>27 фев: <DD><a href="/catalog/cat115.shtml" title="Цены снижены"><span class="title">Скотч малярный, строительный</span><span class="dop"></span></a><br>
   <DT>20 фев: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Клейкая лента</span></a>, <a href="/catalog/cat153.shtml" title="Расширен ассортимент"><span class="title">Кельмы</span></a><span class="dop"> HARDY</span><br>
   <DT>20 фев: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Крестики для плитки</span><span class="dop"> HARDY</span></a><br>
   <DT>17 фев: <DD><a href="/catalog/cat228.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Тех. ткани и ветошь</span></a>; <a href="/catalog/cat186.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Веревка</span></a><br>
@@ -10,9 +13,6 @@
   <DT>14 фев: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
   <DT>13 фев: <DD><a href="/catalog/cat535.shtml" title="Расширен ассортимент"><span class="title">Кисти плоские</span><span class="dop"> HARDY (Польша)</span></a><br>
   <DT>13 фев: <DD><a href="/catalog/cat538.shtml" title="Новые товары"><span class="title">Кисти макловицы</span><span class="dop"> HARDY</span></a><br>
-  <DT>02 фев: <DD><a href="/catalog/cat109.shtml" title="Цены снижены"><span class="title">Маркеры промышленные</span><span class="dop"></span></a><br>
-  <DT>01 фев: <DD><a href="/catalog/cat299.shtml" title="Новые товары"><span class="title">Свёрла по металлу</span><span class="dop"> Bohrer P6M5</span></a><br>
-  <DT>01 фев: <DD><a href="/catalog/cat72.shtml"  title="Новые товары"><span class="title">Строительные рулетки</span><span class="dop"> Bohrer</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
