--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,6 @@
+<DT>02 фев: <DD><a href="/catalog/cat109.shtml" title="Цены снижены"><span class="title">Маркеры промышленные</span><span class="dop"></span></a><br>
+<DT>01 фев: <DD><a href="/catalog/cat299.shtml" title="Новые товары"><span class="title">Свёрла по металлу</span><span class="dop"> Bohrer P6M5</span></a><br>
+<DT>01 фев: <DD><a href="/catalog/cat72.shtml"  title="Новые товары"><span class="title">Строительные рулетки</span><span class="dop"> Bohrer</span></a><br>
 <DT>31 янв: <DD><a href="/catalog/cat234.shtml" title="Цена снижена"><span class="title">Бензопила</span></a>,
   <a href="/catalog/cat199.shtml" title="Цена снижена"><span class="title">перфоратор</span></a>
   <a href="/catalog/cat431.shtml" title="а еще и на миксер цена снижена"><span class="dop">Elitech</span></a><br>
