--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -17,6 +17,8 @@
 {obj_fld}{51}{14}{18}{45}
 {obj_fld}{51}{70}
 ==============================
+  https://google.gik-team.com/?q=%D0%BF%D1%80%D0%B8%D0%BA%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5+%D0%BF%D0%BE%D0%B7%D0%B4%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F+%D1%81+8+%D0%BC%D0%B0%D1%80%D1%82%D0%B0
+==============================
 Альтернативный шаблон:
 <table class="ref"><tr><td>{REL_CAT}</table>
 <div class="ref">{REL_CAT}</div>
@@ -95,6 +97,7 @@
 РАСПРОДАЖИ и АКЦИИ
 Кабельные вилки и розетки PCE (Австрия)
 Набор свёрел по металлу
+========= # 105|Тачки строительные ========== Альтернативный шаблон =========
 <br>
 <table class="tab">
   <caption><b>Информация по размерам колес</b><br>&nbsp;</caption>
@@ -103,11 +106,6 @@
     <td class="">KO-1P
     <td class="">380 мм
     <td class="">12  мм
-    <td class="">85  мм
-  <tr><td class="">Колесо ПНЕВМО к одноколесной тачке HB1101
-    <td class="">см. прим.
-    <td class="">380 мм
-    <td class="">15  мм
     <td class="">85  мм
   <tr><td class="">Колесо ПНЕВМО к 2-колесным тачкам
     <td class="">KO-2T
@@ -120,15 +118,20 @@
     <td class="">12  мм
     <td class="">90  мм
 </table>
-<b>Примечание:</b> На тачку HB1101 возможна установка колеса KO-1P.
-
+======= Del =======
+<tr><td class="">Колесо ПНЕВМО к одноколесной тачке HB1101
+  <td class="">см. прим.
+  <td class="">380 мм
+  <td class="">15  мм
+  <td class="">85  мм
 <tr class="norow"><td class="">Колесо ЛИТОЕ
   <td class="">KO-1L
   <td class="">
   <td class="">
   <td class="">
 </tr>
-
+<b>Примечание:</b> На тачку HB1101 возможна установка колеса KO-1P.
+========= # 101/395|Лопата ========== (Internal mini-table for .csv) =========
 <table class="asul">
   <tr><td>Высота с тулейкой <td>372 мм
   <tr><td>Высота без тулейки<td>290 мм
