--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,18 +1,14 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>03 мар: <DD><a href="/catalog/cat541.shtml" title="Цены снижены"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
-  <DT>02 мар: <DD><a href="/catalog/cat177.shtml" title="Новые товары"><span class="title">Изолента</span></a> и <a href="/catalog/cat552.shtml" title="Новый товар"><span class="title">размет. шнур</span></a><span class="dop"> HARDY</span><br>
-  <DT>27 фев: <DD><a href="/catalog/cat115.shtml" title="Цены снижены"><span class="title">Скотч малярный, строительный</span><span class="dop"></span></a><br>
-  <DT>20 фев: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Клейкая лента</span></a>, <a href="/catalog/cat153.shtml" title="Расширен ассортимент"><span class="title">Кельмы</span></a><span class="dop"> HARDY</span><br>
-  <DT>20 фев: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Крестики для плитки</span><span class="dop"> HARDY</span></a><br>
-  <DT>17 фев: <DD><a href="/catalog/cat228.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Тех. ткани и ветошь</span></a>; <a href="/catalog/cat186.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Веревка</span></a><br>
-  <DT>17 фев: <DD><a href="/catalog/cat105.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
-  <DT>16 фев: <DD><a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы по дереву</span><span class="dop"> и т. п.</span></a><br>
-  <DT>15 фев: <DD><a href="/catalog/cat546.shtml" title="Новый товар"><span class="title">Краска для металла</span><span class="dop"> "Panzer"</span></a><br>
-  <DT>14 фев: <DD><a href="/catalog/cat212.shtml" title="Расширен ассортимент"><span class="title">Уровни</span><span class="dop"> HARDY (Польша)</span></a><br>
-  <DT>14 фев: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
-  <DT>13 фев: <DD><a href="/catalog/cat535.shtml" title="Расширен ассортимент"><span class="title">Кисти плоские</span><span class="dop"> HARDY (Польша)</span></a><br>
-  <DT>13 фев: <DD><a href="/catalog/cat538.shtml" title="Новые товары"><span class="title">Кисти макловицы</span><span class="dop"> HARDY</span></a><br>
+  <DT>13 апр: <DD><a href="/catalog/cat155.shtml" title="Новые товары"><span class="title">Гладилки, нерж. ст.</span><span class="dop"> HARDY</span></a><br>
+  <DT>12 апр: <DD><a href="/catalog/cat557.shtml" title="Новые товары"><span class="title">Шлиф. круги на липучке</span><span class="dop"></span></a><br>
+  <DT>12 апр: <DD><a href="/catalog/cat241.shtml" title="Новые товары"><span class="title">Абразивная сетка</span><span class="dop"> Кюснер</span></a><br>
+  <DT>10 апр: <DD><a href="/catalog/cat174.shtml" title="Расширен ассортимент"><span class="title">Ключи имбусовые</span><span class="dop"> TORX</span></a><br>
+  <DT>05 апр: <DD><a href="/catalog/cat28.shtml"  title="Новые товары"><span class="title">Диски алмазные</span><span class="dop"> СИБРТЕХ</span></a><br>
+  <DT>31 мар: <DD><a href="/catalog/cat270.shtml" title="Новый товар"><span class="title">Клей аэрозольный</span><span class="dop"> ZIGGER PF</span></a><br>
+  <DT>31 мар: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик для сэндвич-панелей</span><span class="dop"></span></a><br>
+  <DT>30 мар: <DD><a href="/catalog/cat505.shtml" title="Новый товар"><span class="title">Смазка-спрей для цепей</span><span class="dop"></span></a><br>
+  <DT>28 мар: <DD><a href="/catalog/cat536.shtml" title="Новые товары"><span class="title">Кисти круглые</span><span class="dop"> HARDY (Польша)</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
