--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -7,6 +7,7 @@
 <DL style="max-width: 25em"><DT>П:<DD>0<DT>О:<DD>0</DL>
 </span></p><UL><LI>.</UL><p><span class="addt">
  <span class="art">арт. </span>
+ /<span class="blue"> BOHRER,</span>
 </span><span class="for">
 <br><b>Цена за упаковку 10 штук.</b>
 <abbr title="м">П</abbr>
@@ -27,6 +28,7 @@
 ==============================
 {obj_fld}{51}{79}{42}
 <br><br><a href="/catalog/cat490.shtml">РАСПРОДАЖА строительных рулеток!</a>
+<br><b>Распродажа ограничена количеством товара на складе, уточняйте у менеджеров.</b>
 <br><b>Распродажа ограничена количеством товара на складе, оно указано в графе "Доступно".</b>
 <br>Основной ассортимент строительных рулеток представлен <a href="/catalog/cat72.shtml">здесь</a>.
 <div class="ref">РАСПРОДАЖА строительных рулеток!{REL_CAT}</div>
@@ -52,7 +54,7 @@
 </table></td></tr></table></a></div>
   ==============================
 
-<LI>Имеется <a href="pdf" target=_blank title="Документ PDF">руководство по эксплуатации</a>.</LI>
+<LI>Имеется <a href="pdf" target=_blank title="Документ PDF">Руководство по эксплуатации</a>.</LI>
 <br>Имеется <a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank title="Документ PDF">сертификат пожарной безопасности</a>.</span></p></td><td align=center><a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank><img style="border:none" src=/img/pic/foam/small/Cert_Profpur.JPG title="Картинка: Сертификат пожарной безопасности"></a><p><span>
 </span></p></td>
 Имеется <a href=/img/pic/foam/big/Certificate.JPG target=_blank title="Картинка JPG">сертификат пожарной безопасности</a>.<LI>Технические характеристики: <a href=/img/pic/foam/big/FOME-PRO-2.pdf target=_blank title="Документ PDF">Mounting Foam</a>, <a href=/img/pic/foam/big/FOME-PRO-1.pdf target=_blank title="Документ PDF">Gun Foam</a></UL></span></p></td><td class=nop align=center width=1><a href=/img/pic/foam/big/Certificate.JPG target=_blank><img style=border:none; src=/img/pic/foam/small/Certificate.JPG title="Сертификат пожарной безопасности"></a><p><span>
