--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,18 @@
+<DT>22 мар: <DD><a href="/catalog/cat14.shtml"  title="Цены снижены"><span class="title">Гвозди строительные</span><span class="dop"> ГОСТ</span></a><br>
+<DT>20 мар: <DD><a href="/catalog/cat312.shtml" title="Новые товары"><span class="title">Эмаль</span><span class="dop"> ПФ-115, KRAFOR</span></a><br>
+<DT>03 мар: <DD><a href="/catalog/cat541.shtml" title="Цены снижены"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
+<DT>02 мар: <DD><a href="/catalog/cat177.shtml" title="Новые товары"><span class="title">Изолента</span></a> и <a href="/catalog/cat552.shtml" title="Новый товар"><span class="title">размет. шнур</span></a><span class="dop"> HARDY</span><br>
+<DT>27 фев: <DD><a href="/catalog/cat115.shtml" title="Цены снижены"><span class="title">Скотч малярный, строительный</span><span class="dop"></span></a><br>
+<DT>20 фев: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Клейкая лента</span></a>, <a href="/catalog/cat153.shtml" title="Расширен ассортимент"><span class="title">Кельмы</span></a><span class="dop"> HARDY</span><br>
+<DT>20 фев: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Крестики для плитки</span><span class="dop"> HARDY</span></a><br>
+<DT>17 фев: <DD><a href="/catalog/cat228.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Тех. ткани и ветошь</span></a>; <a href="/catalog/cat186.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Веревка</span></a><br>
+<DT>17 фев: <DD><a href="/catalog/cat105.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
+<DT>16 фев: <DD><a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы по дереву</span><span class="dop"> и т. п.</span></a><br>
+<DT>15 фев: <DD><a href="/catalog/cat546.shtml" title="Новый товар"><span class="title">Краска для металла</span><span class="dop"> "Panzer"</span></a><br>
+<DT>14 фев: <DD><a href="/catalog/cat212.shtml" title="Расширен ассортимент"><span class="title">Уровни</span><span class="dop"> HARDY (Польша)</span></a><br>
+<DT>14 фев: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
+<DT>13 фев: <DD><a href="/catalog/cat535.shtml" title="Расширен ассортимент"><span class="title">Кисти плоские</span><span class="dop"> HARDY (Польша)</span></a><br>
+<DT>13 фев: <DD><a href="/catalog/cat538.shtml" title="Новые товары"><span class="title">Кисти макловицы</span><span class="dop"> HARDY</span></a><br>
 <DT>02 фев: <DD><a href="/catalog/cat109.shtml" title="Цены снижены"><span class="title">Маркеры промышленные</span><span class="dop"></span></a><br>
 <DT>01 фев: <DD><a href="/catalog/cat299.shtml" title="Новые товары"><span class="title">Свёрла по металлу</span><span class="dop"> Bohrer P6M5</span></a><br>
 <DT>01 фев: <DD><a href="/catalog/cat72.shtml"  title="Новые товары"><span class="title">Строительные рулетки</span><span class="dop"> Bohrer</span></a><br>
