--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,39 +1,40 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 апр: <DD><a href="/catalog/cat30.shtml"  title="Цены снижены"><span class="title">Шлифовальная шкурка</span><span class="dop"> (рулон)</span></a><br>
+  <DT>24 апр: <DD><a href="/catalog/cat457.shtml" title="Новый товар"><span class="title">Грунт универсальный</span><span class="dop"> Мономах</span></a><br>
+  <DT>21 апр: <DD><a href="/catalog/cat483.shtml" title="Новый товар"><span class="title">Краска в/д фасадная</span><span class="dop"> супербелая</span></a><br>
+  <DT>18 апр: <DD><a href="/catalog/cat559.shtml" title="Новые товары"><span class="title">Валики</span><span class="dop"> Roma 18 (HARDY)</span></a><br>
+  <DT>18 апр: <DD><a href="/catalog/cat30.shtml"  title="Новый товар"><span class="title">Бумага наждачная</span><span class="dop"> PS33 белая</span></a><br>
+  <DT>18 апр: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Plus 6-гранная</span><span class="dop"> GR&Ouml;NE</span></a><br>
   <DT>13 апр: <DD><a href="/catalog/cat155.shtml" title="Новые товары"><span class="title">Гладилки, нерж. ст.</span><span class="dop"> HARDY</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat557.shtml" title="Новые товары"><span class="title">Шлиф. круги на липучке</span><span class="dop"></span></a><br>
-  <DT>12 апр: <DD><a href="/catalog/cat241.shtml" title="Новые товары"><span class="title">Абразивная сетка</span><span class="dop"> Кюснер</span></a><br>
+  <DT>12 апр: <DD><a href="/catalog/cat241.shtml" title="Новые товары"><span class="title">Абразивная сетка</span><span class="dop"> K&Uuml;SSNER</span></a><br>
   <DT>10 апр: <DD><a href="/catalog/cat174.shtml" title="Расширен ассортимент"><span class="title">Ключи имбусовые</span><span class="dop"> TORX</span></a><br>
   <DT>05 апр: <DD><a href="/catalog/cat28.shtml"  title="Новые товары"><span class="title">Диски алмазные</span><span class="dop"> СИБРТЕХ</span></a><br>
-  <DT>31 мар: <DD><a href="/catalog/cat270.shtml" title="Новый товар"><span class="title">Клей аэрозольный</span><span class="dop"> ZIGGER PF</span></a><br>
-  <DT>31 мар: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик для сэндвич-панелей</span><span class="dop"></span></a><br>
-  <DT>30 мар: <DD><a href="/catalog/cat505.shtml" title="Новый товар"><span class="title">Смазка-спрей для цепей</span><span class="dop"></span></a><br>
-  <DT>28 мар: <DD><a href="/catalog/cat536.shtml" title="Новые товары"><span class="title">Кисти круглые</span><span class="dop"> HARDY (Польша)</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
-      <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/eld/small/specelectrod4-1-200.JPG"><img
-        src="/img/pic/eld/small/specelectrod4-1.JPG" width="98"
-        title="Электроды сварочные"></a></td>
-      <td class="good-txt"><a href="/catalog/cat45.shtml"
-        title="Электроды сварочные на нашем сайте"><p><span
-        class="title">Электроды сварочные</span><span
-        class="dop"> пр-ва з-да СпецЭлектрод</span><span
-        class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
+      <td align="center" width=1>
+        <a class="cboxElement" href="/img/pic/shmal/big/0201-545750n.jpg" title="Большое фото: Кисть плоская ПРОФИ 70 мм (HARDY, Польша)"><img src="/img/pic/shmal/small/0201-545750n.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat535.shtml"
+        title="Кисть плоская ПРОФИ 70 мм (HARDY, Польша) на нашем сайте">
+        <p>
+          <span class="title">Кисть плоская с. 54 ПРОФИ, 70 мм</span><span class="dop"><br>(HARDY, Польша)</span>
+        </p></a>
   </table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/defence/big/Perchatki%20HB%20s%20PVH.jpg"><img
-        src="/img/pic/defence/small/Perchatki%20HB%20s%20PVH.jpg" width="98"
-        title="Большое фото: Перчатки Х/Б с нанесением ПВХ"></a></td>
-      <td class="good-txt"><a href="/catalog/cat86.shtml"
-        title="Перчатки ХБ с ПВХ и латексным покрытием на нашем сайте"><p><span
-        class="title">Перчатки Х/Б с&nbsp;нанесением&nbsp;ПВХ</span><span
-        class="dop"><br>Эконом,<br>Профи,<br>Люкс</span></p></a>
+        href="/img/pic/shmal/big/5110-10.jpg" title="Большое фото: Валики Roma 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-10.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat559.shtml"
+        title="Валики Roma 18 (HARDY, Польша) на нашем сайте">
+        <p>
+          <span class="title">Валики Roma 18 (HARDY, Польша)</span><span class="dop"><br>для красок на водной основе</span>
+        </p></a>
   </table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
@@ -47,24 +48,14 @@
   </table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
-      <td align="center" width=1>
-        <a class="cboxElement" href="/img/pic/drill/big/2204-61.jpg" title="Большое фото: Буры по бетону КРЕСТОВЫЕ для перфоратора SDS Plus GR&ouml;NE (ГРЁН), Польша"><img src="/img/pic/drill/small/2204-61.jpg" width="98"></a>
-      </td>
-      <td class="good-txt">
-        <a href="/catalog/cat478.shtml" title="Буры по бетону КРЕСТОВЫЕ для перфоратора SDS Plus GR&ouml;NE (ГРЁН), Польша на нашем сайте">
-          <p>
-            <span class="title">Буры по бетону КРЕСТОВЫЕ SDS+</span><span class="dop"><br>GR&ouml;NE (ГРЁН), Польша</span>
-          </p></a>
-  </table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/shmal/big/0110-22.jpg" title="Большое фото: Профессиональные ФАСАДНЫЕ валики HARDY (Польша)"><img src="/img/pic/shmal/small/0110-22.jpg" width="98"></a>
-      </td>
-      <td class="good-txt"><a href="/catalog/cat63.shtml"
-        title="Профессиональные ФАСАДНЫЕ валики HARDY (Польша) на нашем сайте">
-        <p>
-          <span class="title">Профессиональные ФАСАДНЫЕ валики</span><span class="dop"><br>HARDY (Польша)</span>
-        </p></a>
+        href="/img/pic/eld/small/specelectrod4-1-200.JPG"><img
+        src="/img/pic/eld/small/specelectrod4-1.JPG" width="98"
+        title="Электроды сварочные"></a></td>
+      <td class="good-txt"><a href="/catalog/cat45.shtml"
+        title="Электроды сварочные на нашем сайте"><p><span
+        class="title">Электроды сварочные</span><span
+        class="dop"> пр-ва з-да СпецЭлектрод</span><span
+        class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
   </table>
 </div>
