--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,7 @@
+<DT>31 мар: <DD><a href="/catalog/cat270.shtml" title="Новый товар"><span class="title">Клей аэрозольный</span><span class="dop"> ZIGGER PF</span></a><br>
+<DT>31 мар: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик для сэндвич-панелей</span><span class="dop"></span></a><br>
+<DT>30 мар: <DD><a href="/catalog/cat505.shtml" title="Новый товар"><span class="title">Смазка-спрей для цепей</span><span class="dop"></span></a><br>
+<DT>28 мар: <DD><a href="/catalog/cat536.shtml" title="Новые товары"><span class="title">Кисти круглые</span><span class="dop"> HARDY (Польша)</span></a><br>
 <DT>22 мар: <DD><a href="/catalog/cat14.shtml"  title="Цены снижены"><span class="title">Гвозди строительные</span><span class="dop"> ГОСТ</span></a><br>
 <DT>20 мар: <DD><a href="/catalog/cat312.shtml" title="Новые товары"><span class="title">Эмаль</span><span class="dop"> ПФ-115, KRAFOR</span></a><br>
 <DT>03 мар: <DD><a href="/catalog/cat541.shtml" title="Цены снижены"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
