--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,16 +1,21 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>30 мая: <DD><a href="/catalog/cat578.shtml" title="Новый товар"><span class="title">Строительный миксер</span><span class="dop"> GR&Ouml;NE</span></a><br>
+  <DT>23 мая: <DD><span class="title">Валики</span>
+    <a href="/catalog/cat54.shtml"  title="Расширен ассортимент: Валики поролон/флок"><span class="title">поролон/флок</span></a> и
+    <a href="/catalog/cat144.shtml" title="Расширен ассортимент: Валики велюровые"><span class="title">велюр</span></a><br>
+  <DT>19 мая: <DD>
+    <a href="/catalog/cat545.shtml" title="Новые товары: Круги абразивные"><span class="title">Абразивы</span></a>
+    <a href="/catalog/cat575.shtml" title="Новые товары: Диски полировальные"><span class="title">на липучке</span></a>
+    <a href="/catalog/cat574.shtml" title="Новые товары: Сетка абразивная"><span class="title">разные</span></a><br>
+  <DT>17 мая: <DD><a href="/catalog/cat565.shtml" title="Расширен ассортимент"><span class="title">Наждачная бумага</span><span class="dop"> K&Uuml;SSNER</span></a><br>
+  <DT>16 мая: <DD><a href="/catalog/cat566.shtml" title="Новые товары"><span class="title">Кусачки для плитки/терракоты</span><span class="dop"></span></a><br>
   <DT>27 апр: <DD><a href="/catalog/cat30.shtml"  title="Цены снижены"><span class="title">Шлифовальная шкурка</span><span class="dop"> (рулон)</span></a><br>
   <DT>24 апр: <DD><a href="/catalog/cat457.shtml" title="Новый товар"><span class="title">Грунт универсальный</span><span class="dop"> Мономах</span></a><br>
   <DT>21 апр: <DD><a href="/catalog/cat483.shtml" title="Новый товар"><span class="title">Краска в/д фасадная</span><span class="dop"> супербелая</span></a><br>
   <DT>18 апр: <DD><a href="/catalog/cat559.shtml" title="Новые товары"><span class="title">Валики</span><span class="dop"> Roma 18 (HARDY)</span></a><br>
   <DT>18 апр: <DD><a href="/catalog/cat30.shtml"  title="Новый товар"><span class="title">Бумага наждачная</span><span class="dop"> PS33 белая</span></a><br>
   <DT>18 апр: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Plus 6-гранная</span><span class="dop"> GR&Ouml;NE</span></a><br>
-  <DT>13 апр: <DD><a href="/catalog/cat155.shtml" title="Новые товары"><span class="title">Гладилки, нерж. ст.</span><span class="dop"> HARDY</span></a><br>
-  <DT>12 апр: <DD><a href="/catalog/cat557.shtml" title="Новые товары"><span class="title">Шлиф. круги на липучке</span><span class="dop"></span></a><br>
-  <DT>12 апр: <DD><a href="/catalog/cat241.shtml" title="Новые товары"><span class="title">Абразивная сетка</span><span class="dop"> K&Uuml;SSNER</span></a><br>
-  <DT>10 апр: <DD><a href="/catalog/cat174.shtml" title="Расширен ассортимент"><span class="title">Ключи имбусовые</span><span class="dop"> TORX</span></a><br>
-  <DT>05 апр: <DD><a href="/catalog/cat28.shtml"  title="Новые товары"><span class="title">Диски алмазные</span><span class="dop"> СИБРТЕХ</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
