--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,9 @@
+<DT>15 мая: <DD><a href="/catalog/cat54.shtml"  title="Новые товары"><span class="title">Валики Moltoflok</span><span class="dop"> (HARDY)</span></a><br>
+<DT>13 апр: <DD><a href="/catalog/cat155.shtml" title="Новые товары"><span class="title">Гладилки, нерж. ст.</span><span class="dop"> HARDY</span></a><br>
+<DT>12 апр: <DD><a href="/catalog/cat557.shtml" title="Новые товары"><span class="title">Шлиф. круги на липучке</span><span class="dop"></span></a><br>
+<DT>12 апр: <DD><a href="/catalog/cat241.shtml" title="Новые товары"><span class="title">Абразивная сетка</span><span class="dop"> K&Uuml;SSNER</span></a><br>
+<DT>10 апр: <DD><a href="/catalog/cat174.shtml" title="Расширен ассортимент"><span class="title">Ключи имбусовые</span><span class="dop"> TORX</span></a><br>
+<DT>05 апр: <DD><a href="/catalog/cat28.shtml"  title="Новые товары"><span class="title">Диски алмазные</span><span class="dop"> СИБРТЕХ</span></a><br>
 <DT>31 мар: <DD><a href="/catalog/cat270.shtml" title="Новый товар"><span class="title">Клей аэрозольный</span><span class="dop"> ZIGGER PF</span></a><br>
 <DT>31 мар: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик для сэндвич-панелей</span><span class="dop"></span></a><br>
 <DT>30 мар: <DD><a href="/catalog/cat505.shtml" title="Новый товар"><span class="title">Смазка-спрей для цепей</span><span class="dop"></span></a><br>
