Till msg template

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -481,3 +481,16 @@
 <DT>13 апр.: <DD><a href="/catalog/cat27.shtml"  title="Новый товар"><span class="title">Лепестковые круги</span><span class="dop"> TSUNAMI</span></a><br>
 <DT>13 апр.: <DD><a href="/catalog/cat114.shtml" title="Расширен ассортимент"><span class="title">Лента сигнальная</span><span class="dop"> кр.-белая</span></a><br>
   <!-- ^ 2012 ^ -->
+</DL><!-- >=====================< -->
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/eld/small/specelectrod4-1-200.JPG"><img
+        src="/img/pic/eld/small/specelectrod4-1.JPG" width="98"
+        title="Электроды сварочные"></a></td>
+      <td class="good-txt"><a href="/catalog/cat45.shtml"
+        title="Электроды сварочные на нашем сайте"><p><span
+        class="title">Электроды сварочные</span><span
+        class="dop"> пр-ва з-да СпецЭлектрод</span><span
+        class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
+  </table>
