--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>13 июн: <DD><a href="/catalog/cat591.shtml" title="Новые товары"><span class="title">Монтажные ленты</span><span class="dop"> "Scley"</span></a><br>
+  <DT>09 июн: <DD><a href="/catalog/cat585.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Малярные валики</span><span class="dop"></span></a><br>
   <DT>30 мая: <DD><a href="/catalog/cat578.shtml" title="Новый товар"><span class="title">Строительный миксер</span><span class="dop"> GR&Ouml;NE</span></a><br>
   <DT>23 мая: <DD><span class="title">Валики</span>
     <a href="/catalog/cat54.shtml"  title="Расширен ассортимент: Валики поролон/флок"><span class="title">поролон/флок</span></a> и
@@ -54,13 +56,13 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/eld/small/specelectrod4-1-200.JPG"><img
-        src="/img/pic/eld/small/specelectrod4-1.JPG" width="98"
-        title="Электроды сварочные"></a></td>
-      <td class="good-txt"><a href="/catalog/cat45.shtml"
-        title="Электроды сварочные на нашем сайте"><p><span
-        class="title">Электроды сварочные</span><span
-        class="dop"> пр-ва з-да СпецЭлектрод</span><span
-        class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
+        href="/img/pic/strhoz/big/0300-88.jpg"><img
+        src="/img/pic/strhoz/small/0300-88.jpg" width="98"
+        title="Лента малярная синяя"></a></td>
+      <td class="good-txt"><a href="/catalog/cat588.shtml"
+        title="Большое фото: Лента малярная синяя на нашем сайте"><p><span
+        class="title">Лента малярная синяя</span><span
+        class="dop"><br>"Scley" (Польша)</span><span
+        class="addt">,<br>особо устойчивая к разрывам тисненая бумажная лента</span></p></a>
   </table>
 </div>
