After GD BD and Hosp.7

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,4 +1,10 @@
 <DT>15 мая: <DD><a href="/catalog/cat54.shtml"  title="Новые товары"><span class="title">Валики Moltoflok</span><span class="dop"> (HARDY)</span></a><br>
+<DT>27 апр: <DD><a href="/catalog/cat30.shtml"  title="Цены снижены"><span class="title">Шлифовальная шкурка</span><span class="dop"> (рулон)</span></a><br>
+<DT>24 апр: <DD><a href="/catalog/cat457.shtml" title="Новый товар"><span class="title">Грунт универсальный</span><span class="dop"> Мономах</span></a><br>
+<DT>21 апр: <DD><a href="/catalog/cat483.shtml" title="Новый товар"><span class="title">Краска в/д фасадная</span><span class="dop"> супербелая</span></a><br>
+<DT>18 апр: <DD><a href="/catalog/cat559.shtml" title="Новые товары"><span class="title">Валики</span><span class="dop"> Roma 18 (HARDY)</span></a><br>
+<DT>18 апр: <DD><a href="/catalog/cat30.shtml"  title="Новый товар"><span class="title">Бумага наждачная</span><span class="dop"> PS33 белая</span></a><br>
+<DT>18 апр: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Plus 6-гранная</span><span class="dop"> GR&Ouml;NE</span></a><br>
 <DT>13 апр: <DD><a href="/catalog/cat155.shtml" title="Новые товары"><span class="title">Гладилки, нерж. ст.</span><span class="dop"> HARDY</span></a><br>
 <DT>12 апр: <DD><a href="/catalog/cat557.shtml" title="Новые товары"><span class="title">Шлиф. круги на липучке</span><span class="dop"></span></a><br>
 <DT>12 апр: <DD><a href="/catalog/cat241.shtml" title="Новые товары"><span class="title">Абразивная сетка</span><span class="dop"> K&Uuml;SSNER</span></a><br>
