--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,11 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>19 июн: <DD><a href="/catalog/cat607.shtml" title="Новый товар"><span class="title">Стеклодомкрат тройной</span><span class="dop"> 100 кг</span></a><br>
+  <DT>19 июн: <DD><a href="/catalog/cat459.shtml" title="Новый товар"><span class="title">Декор. штукатурка</span><span class="dop"> "Короед"</span></a><br>
+  <DT>16 июн: <DD><a href="/catalog/cat592.shtml" title="Новый товар"><span class="title">Лента алюминиевая</span><span class="dop"> *538*</span></a><br>
+  <DT>16 июн: <DD>
+  <a href="/catalog/cat604.shtml" title="Новые товары: Кисти плоские серии 61"><span class="title">Кисти плоские</span></a>
+  <a href="/catalog/cat606.shtml" title="Новые товары: Кисти плоские УГЛОВЫЕ"><span class="title">УГЛОВЫЕ</span><span class="dop"> HARDY</span></a><br>
   <DT>13 июн: <DD><a href="/catalog/cat591.shtml" title="Новые товары"><span class="title">Монтажные ленты</span><span class="dop"> "Scley"</span></a><br>
   <DT>09 июн: <DD><a href="/catalog/cat585.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Малярные валики</span><span class="dop"></span></a><br>
   <DT>30 мая: <DD><a href="/catalog/cat578.shtml" title="Новый товар"><span class="title">Строительный миксер</span><span class="dop"> GR&Ouml;NE</span></a><br>
@@ -12,35 +18,31 @@
     <a href="/catalog/cat574.shtml" title="Новые товары: Сетка абразивная"><span class="title">разные</span></a><br>
   <DT>17 мая: <DD><a href="/catalog/cat565.shtml" title="Расширен ассортимент"><span class="title">Наждачная бумага</span><span class="dop"> K&Uuml;SSNER</span></a><br>
   <DT>16 мая: <DD><a href="/catalog/cat566.shtml" title="Новые товары"><span class="title">Кусачки для плитки/терракоты</span><span class="dop"></span></a><br>
-  <DT>27 апр: <DD><a href="/catalog/cat30.shtml"  title="Цены снижены"><span class="title">Шлифовальная шкурка</span><span class="dop"> (рулон)</span></a><br>
-  <DT>24 апр: <DD><a href="/catalog/cat457.shtml" title="Новый товар"><span class="title">Грунт универсальный</span><span class="dop"> Мономах</span></a><br>
-  <DT>21 апр: <DD><a href="/catalog/cat483.shtml" title="Новый товар"><span class="title">Краска в/д фасадная</span><span class="dop"> супербелая</span></a><br>
-  <DT>18 апр: <DD><a href="/catalog/cat559.shtml" title="Новые товары"><span class="title">Валики</span><span class="dop"> Roma 18 (HARDY)</span></a><br>
-  <DT>18 апр: <DD><a href="/catalog/cat30.shtml"  title="Новый товар"><span class="title">Бумага наждачная</span><span class="dop"> PS33 белая</span></a><br>
-  <DT>18 апр: <DD><a href="/catalog/cat49.shtml"  title="Новый товар"><span class="title">Пика SDS Plus 6-гранная</span><span class="dop"> GR&Ouml;NE</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1>
-        <a class="cboxElement" href="/img/pic/shmal/big/0201-545750n.jpg" title="Большое фото: Кисть плоская ПРОФИ 70 мм (HARDY, Польша)"><img src="/img/pic/shmal/small/0201-545750n.jpg" width="98"></a>
+        <a class="cboxElement" href="/img/pic/equip/big/0440-840305.jpg" title="Большое фото: Тенты защитные HARDY (Польша)"><img src="/img/pic/equip/small/0440-840305.jpg" width="98"></a>
       </td>
-      <td class="good-txt"><a href="/catalog/cat535.shtml"
-        title="Кисть плоская ПРОФИ 70 мм (HARDY, Польша) на нашем сайте">
+      <td class="good-txt"><a href="/catalog/cat579.shtml"
+        title="Тенты защитные HARDY (Польша) на нашем сайте">
         <p>
-          <span class="title">Кисть плоская с. 54 ПРОФИ, 70 мм</span><span class="dop"><br>(HARDY, Польша)</span>
+          <span class="title">Тенты защитные</span><span class="dop"><br>HARDY (Польша)</span>
+          <span class="addt"><br>4х5 и 6х8 м, 140г/кв.м.<br>Практичные, лёгкие, удобные,<br>с металлическими кольцами.</span>
         </p></a>
   </table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/shmal/big/5110-10.jpg" title="Большое фото: Валики Roma 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-10.jpg" width="98"></a>
+        href="/img/pic/shmal/big/0110-684818.jpg" title="Большое фото: Профессиональные валики ProPlus (HARDY, Польша)"><img src="/img/pic/shmal/small/0110-684818.jpg" width="98"></a>
       </td>
-      <td class="good-txt"><a href="/catalog/cat559.shtml"
-        title="Валики Roma 18 (HARDY, Польша) на нашем сайте">
+      <td class="good-txt"><a href="/catalog/cat553.shtml"
+        title="Профессиональные валики ProPlus (HARDY, Польша) на нашем сайте">
         <p>
-          <span class="title">Валики Roma 18 (HARDY, Польша)</span><span class="dop"><br>для красок на водной основе</span>
+          <span class="title">Профессиональные валики ProPlus</span><span class="dop"> (HARDY, Польша)</span>
+          <span class="addt"><br>для всех типов красок и лаков</span>
         </p></a>
   </table>
   <table class="one-good" cellpadding="0">
@@ -64,5 +66,28 @@
         class="title">Лента малярная синяя</span><span
         class="dop"><br>"Scley" (Польша)</span><span
         class="addt">,<br>особо устойчивая к разрывам тисненая бумажная лента</span></p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1>
+        <a class="cboxElement" href="/img/pic/shmal/big/0201-545750n.jpg" title="Большое фото: Кисть плоская ПРОФИ 70 мм (HARDY, Польша)"><img src="/img/pic/shmal/small/0201-545750n.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat535.shtml"
+        title="Кисть плоская ПРОФИ 70 мм (HARDY, Польша) на нашем сайте">
+        <p>
+          <span class="title">Кисть плоская с. 54 ПРОФИ, 70 мм</span><span class="dop"><br>(HARDY, Польша)</span>
+          <span class="addt"><br>Для красок и лаков на основе растворителей</span>
+        </p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/shmal/big/5110-10.jpg" title="Большое фото: Валики Roma 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-10.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat559.shtml"
+        title="Валики Roma 18 (HARDY, Польша) на нашем сайте">
+        <p>
+          <span class="title">Валики Roma 18 (HARDY, Польша)</span><span class="dop"><br>для красок на водной основе</span>
+        </p></a>
   </table>
 </div>
