Провод гибкий| ПВСнг(А)-LS ГОСТ

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,11 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>04 июл: <DD><a href="/catalog/cat278.shtml" title="Новые товары"><span class="title">Провод гибкий</span><span class="dop"> ПВСнг(А)-LS</span></a><br>
+  <DT>28 июн: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
+  <DT>28 июн: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
+  <DT>27 июн: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Клинья для плитки</span><span class="dop"> HARDY</span></a><br>
+  <DT>27 июн: <DD><a href="/catalog/cat562.shtml" title="Новый товар"><span class="title">Замок с автозапиранием,</span><span class="dop"> 50 мм</span></a><br>
+  <DT>26 июн: <DD><a href="/catalog/cat92.shtml"  title="Цены снижены"><span class="title">Респираторы</span><span class="dop"> Исток, У-2К, РПГ</span></a><br>
   <DT>19 июн: <DD><a href="/catalog/cat607.shtml" title="Новый товар"><span class="title">Стеклодомкрат тройной</span><span class="dop"> 100 кг</span></a><br>
   <DT>19 июн: <DD><a href="/catalog/cat459.shtml" title="Новый товар"><span class="title">Декор. штукатурка</span><span class="dop"> "Короед"</span></a><br>
   <DT>16 июн: <DD><a href="/catalog/cat592.shtml" title="Новый товар"><span class="title">Лента алюминиевая</span><span class="dop"> *538*</span></a><br>
@@ -8,16 +14,6 @@
   <a href="/catalog/cat606.shtml" title="Новые товары: Кисти плоские УГЛОВЫЕ"><span class="title">УГЛОВЫЕ</span><span class="dop"> HARDY</span></a><br>
   <DT>13 июн: <DD><a href="/catalog/cat591.shtml" title="Новые товары"><span class="title">Монтажные ленты</span><span class="dop"> "Scley"</span></a><br>
   <DT>09 июн: <DD><a href="/catalog/cat585.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Малярные валики</span><span class="dop"></span></a><br>
-  <DT>30 мая: <DD><a href="/catalog/cat578.shtml" title="Новый товар"><span class="title">Строительный миксер</span><span class="dop"> GR&Ouml;NE</span></a><br>
-  <DT>23 мая: <DD><span class="title">Валики</span>
-    <a href="/catalog/cat54.shtml"  title="Расширен ассортимент: Валики поролон/флок"><span class="title">поролон/флок</span></a> и
-    <a href="/catalog/cat144.shtml" title="Расширен ассортимент: Валики велюровые"><span class="title">велюр</span></a><br>
-  <DT>19 мая: <DD>
-    <a href="/catalog/cat545.shtml" title="Новые товары: Круги абразивные"><span class="title">Абразивы</span></a>
-    <a href="/catalog/cat575.shtml" title="Новые товары: Диски полировальные"><span class="title">на липучке</span></a>
-    <a href="/catalog/cat574.shtml" title="Новые товары: Сетка абразивная"><span class="title">разные</span></a><br>
-  <DT>17 мая: <DD><a href="/catalog/cat565.shtml" title="Расширен ассортимент"><span class="title">Наждачная бумага</span><span class="dop"> K&Uuml;SSNER</span></a><br>
-  <DT>16 мая: <DD><a href="/catalog/cat566.shtml" title="Новые товары"><span class="title">Кусачки для плитки/терракоты</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
