--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,13 @@
+<DT>30 мая: <DD><a href="/catalog/cat578.shtml" title="Новый товар"><span class="title">Строительный миксер</span><span class="dop"> GR&Ouml;NE</span></a><br>
+<DT>23 мая: <DD><span class="title">Валики</span>
+  <a href="/catalog/cat54.shtml"  title="Расширен ассортимент: Валики поролон/флок"><span class="title">поролон/флок</span></a> и
+  <a href="/catalog/cat144.shtml" title="Расширен ассортимент: Валики велюровые"><span class="title">велюр</span></a><br>
+<DT>19 мая: <DD>
+  <a href="/catalog/cat545.shtml" title="Новые товары: Круги абразивные"><span class="title">Абразивы</span></a>
+  <a href="/catalog/cat575.shtml" title="Новые товары: Диски полировальные"><span class="title">на липучке</span></a>
+  <a href="/catalog/cat574.shtml" title="Новые товары: Сетка абразивная"><span class="title">разные</span></a><br>
+<DT>17 мая: <DD><a href="/catalog/cat565.shtml" title="Расширен ассортимент"><span class="title">Наждачная бумага</span><span class="dop"> K&Uuml;SSNER</span></a><br>
+<DT>16 мая: <DD><a href="/catalog/cat566.shtml" title="Новые товары"><span class="title">Кусачки для плитки/терракоты</span><span class="dop"></span></a><br>
 <DT>15 мая: <DD><a href="/catalog/cat54.shtml"  title="Новые товары"><span class="title">Валики Moltoflok</span><span class="dop"> (HARDY)</span></a><br>
 <DT>27 апр: <DD><a href="/catalog/cat30.shtml"  title="Цены снижены"><span class="title">Шлифовальная шкурка</span><span class="dop"> (рулон)</span></a><br>
 <DT>24 апр: <DD><a href="/catalog/cat457.shtml" title="Новый товар"><span class="title">Грунт универсальный</span><span class="dop"> Мономах</span></a><br>
