Шпатель ПРИЖИМНОЙ / пластик/ HOBBI

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,11 @@
+<DT>19 июн: <DD><a href="/catalog/cat607.shtml" title="Новый товар"><span class="title">Стеклодомкрат тройной</span><span class="dop"> 100 кг</span></a><br>
+<DT>19 июн: <DD><a href="/catalog/cat459.shtml" title="Новый товар"><span class="title">Декор. штукатурка</span><span class="dop"> "Короед"</span></a><br>
+<DT>16 июн: <DD><a href="/catalog/cat592.shtml" title="Новый товар"><span class="title">Лента алюминиевая</span><span class="dop"> *538*</span></a><br>
+<DT>16 июн: <DD>
+  <a href="/catalog/cat604.shtml" title="Новые товары: Кисти плоские серии 61"><span class="title">Кисти плоские</span></a>
+  <a href="/catalog/cat606.shtml" title="Новые товары: Кисти плоские УГЛОВЫЕ"><span class="title">УГЛОВЫЕ</span><span class="dop"> HARDY</span></a><br>
+<DT>13 июн: <DD><a href="/catalog/cat591.shtml" title="Новые товары"><span class="title">Монтажные ленты</span><span class="dop"> "Scley"</span></a><br>
+<DT>09 июн: <DD><a href="/catalog/cat585.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Малярные валики</span><span class="dop"></span></a><br>
 <DT>30 мая: <DD><a href="/catalog/cat578.shtml" title="Новый товар"><span class="title">Строительный миксер</span><span class="dop"> GR&Ouml;NE</span></a><br>
 <DT>23 мая: <DD><span class="title">Валики</span>
   <a href="/catalog/cat54.shtml"  title="Расширен ассортимент: Валики поролон/флок"><span class="title">поролон/флок</span></a> и
