--- a/msgtpl/1-brands.html
+++ b/msgtpl/1-brands.html
@@ -12,5 +12,33 @@
     <td><a href="https://newe.ru/catalog/cat45.shtml" ><img src="pix/speld_l1.gif"><br>Электроды "Спецэлектрод"</a></td>
   </tr>
 </table>
+<table style="width: 600px; border: none; text-align: center">
+  <tr>
+    <td><a href="https://newe.ru/catalog/cat506.shtml"><img src="https://yadi.sk/i/sSaM8eCK3KuPds"><br>Инструменты "Hardy"</a></td>
+    <td><a href="https://newe.ru/catalog/cat518.shtml"><img src="https://yadi.sk/i/SAA6bZPt3KuPnk"><br>Скотчи, ленты "Scley"</a></td>
+    <td><a href="https://newe.ru/catalog/cat45.shtml" ><img src="https://yadi.sk/i/yv6LJQO63KuPq9"><br>Электроды "Спецэлектрод"</a></td>
+  </tr>
+</table>
+<table style="width: 600px; border: none;">
+  <tr>
+    <td style="text-align: center"><a href="https://newe.ru/catalog/cat506.shtml"><img src="pix/hardy_l1.gif"><br>Инструменты<br>&laquo;Hardy&raquo; (Польша)</a></td>
+    <td style="text-align: center"><a href="https://newe.ru/catalog/cat518.shtml"><img src="pix/scley_l1.gif"><br>Скотчи, ленты<br>&laquo;Scley&raquo; (Польша)</a></td>
+    <td style="text-align: center"><a href="https://newe.ru/catalog/cat45.shtml" ><img src="pix/speld_l1.gif"><br>Электроды з-да<br>&laquo;Спецэлектрод&raquo;</a></td>
+  </tr>
+</table>
+<table style="width: 100%; max-width: 600px; border: none; text-align: center; line-height: 90%">
+  <tr>
+    <td><a href="https://newe.ru/catalog/cat506.shtml"><img src="https://www.newe.ru/img/msgtpl/pix/hardy_l1.gif"><br>Инструменты<br>&laquo;Hardy&raquo; (Польша)</a></td>
+    <td><a href="https://newe.ru/catalog/cat518.shtml"><img src="https://www.newe.ru/img/msgtpl/pix/scley_l1.gif"><br>Скотчи и ленты<br>&laquo;Scley&raquo; (Польша)</a></td>
+    <td><a href="https://newe.ru/catalog/cat45.shtml" ><img src="https://www.newe.ru/img/msgtpl/pix/speld_l1.gif"><br>Электроды з-да<br>&laquo;Спецэлектрод&raquo;</a></td>
+  </tr>
+</table>
+<table style="width: 100%; max-width: 600px; border: none; text-align: center; line-height: 90%">
+  <tr>
+    <td><a href="https://newe.ru/catalog/cat506.shtml"><img src="https://resize.yandex.net/mailservice?url=https%3A%2F%2Fwww.newe.ru%2Fimg%2Fmsgtpl%2Fpix%2Fhardy_l1.gif&proxy=yes&key=0dd6659184c5c3f145ce8ceb1f98e600"><br>Инструменты<br>&laquo;Hardy&raquo; (Польша)</a></td>
+    <td><a href="https://newe.ru/catalog/cat518.shtml"><img src="https://resize.yandex.net/mailservice?url=https%3A%2F%2Fwww.newe.ru%2Fimg%2Fmsgtpl%2Fpix%2Fscley_l1.gif&proxy=yes&key=8d24c93e275509d16a9afd0cf6f7f6a2"><br>Скотчи и ленты<br>&laquo;Scley&raquo; (Польша)</a></td>
+    <td><a href="https://newe.ru/catalog/cat45.shtml" ><img src="https://resize.yandex.net/mailservice?url=https%3A%2F%2Fwww.newe.ru%2Fimg%2Fmsgtpl%2Fpix%2Fspeld_l1.gif&proxy=yes&key=ab54c46a4a37464c39d18f7abd772857"><br>Электроды з-да<br>&laquo;Спецэлектрод&raquo;</a></td>
+  </tr>
+</table>
 </body>
 </html>
