--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,19 +1,16 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>07 июл: <DD><a href="/catalog/cat174.shtml" title="Новые товары"><span class="title">Ключи имбусовые</span><span class="dop"> GROSS</span></a><br>
+  <DT>05 июл: <DD><a href="/catalog/cat554.shtml" title="Цены снижены"><span class="title">Профес. маляр. валики</span><span class="dop"> ProPlus</span></a><br>
+  <DT>05 июл: <DD><a href="/catalog/cat121.shtml" title="Новые товары"><span class="title">Плоскогубцы</span><span class="dop"> BOHRER</span></a><br>
   <DT>04 июл: <DD><a href="/catalog/cat278.shtml" title="Новые товары"><span class="title">Провод гибкий</span><span class="dop"> ПВСнг(А)-LS</span></a><br>
+  <DT>03 июл: <DD><a href="/catalog/cat301.shtml" title="Новые товары"><span class="title">Уровни магнитные</span><span class="dop"> HARDY</span></a><br>
+  <DT>03 июл: <DD><a href="/catalog/cat591.shtml" title="Новый товар"><span class="title">Лента монтажная напольная</span><span class="dop"></span></a><br>
   <DT>28 июн: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
   <DT>28 июн: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
   <DT>27 июн: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Клинья для плитки</span><span class="dop"> HARDY</span></a><br>
   <DT>27 июн: <DD><a href="/catalog/cat562.shtml" title="Новый товар"><span class="title">Замок с автозапиранием,</span><span class="dop"> 50 мм</span></a><br>
   <DT>26 июн: <DD><a href="/catalog/cat92.shtml"  title="Цены снижены"><span class="title">Респираторы</span><span class="dop"> Исток, У-2К, РПГ</span></a><br>
-  <DT>19 июн: <DD><a href="/catalog/cat607.shtml" title="Новый товар"><span class="title">Стеклодомкрат тройной</span><span class="dop"> 100 кг</span></a><br>
-  <DT>19 июн: <DD><a href="/catalog/cat459.shtml" title="Новый товар"><span class="title">Декор. штукатурка</span><span class="dop"> "Короед"</span></a><br>
-  <DT>16 июн: <DD><a href="/catalog/cat592.shtml" title="Новый товар"><span class="title">Лента алюминиевая</span><span class="dop"> *538*</span></a><br>
-  <DT>16 июн: <DD>
-  <a href="/catalog/cat604.shtml" title="Новые товары: Кисти плоские серии 61"><span class="title">Кисти плоские</span></a>
-  <a href="/catalog/cat606.shtml" title="Новые товары: Кисти плоские УГЛОВЫЕ"><span class="title">УГЛОВЫЕ</span><span class="dop"> HARDY</span></a><br>
-  <DT>13 июн: <DD><a href="/catalog/cat591.shtml" title="Новые товары"><span class="title">Монтажные ленты</span><span class="dop"> "Scley"</span></a><br>
-  <DT>09 июн: <DD><a href="/catalog/cat585.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Малярные валики</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
