--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -9,6 +9,7 @@
  <span class="art">арт. </span>
  /<span class="blue"> BOHRER,</span>
 </span><span class="for">
+</span><span class="addt">
 <br><b>Цена за упаковку 10 штук.</b>
 <abbr title="м">П</abbr>
 <table cellpadding=0 cellspacing=0 border=0><tr><td>красный<td class=art>арт. 2</table>
