--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,8 @@
+<DT>28 июн: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
+<DT>28 июн: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
+<DT>27 июн: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Клинья для плитки</span><span class="dop"> HARDY</span></a><br>
+<DT>27 июн: <DD><a href="/catalog/cat562.shtml" title="Новый товар"><span class="title">Замок с автозапиранием,</span><span class="dop"> 50 мм</span></a><br>
+<DT>26 июн: <DD><a href="/catalog/cat92.shtml"  title="Цены снижены"><span class="title">Респираторы</span><span class="dop"> Исток, У-2К, РПГ</span></a><br>
 <DT>19 июн: <DD><a href="/catalog/cat607.shtml" title="Новый товар"><span class="title">Стеклодомкрат тройной</span><span class="dop"> 100 кг</span></a><br>
 <DT>19 июн: <DD><a href="/catalog/cat459.shtml" title="Новый товар"><span class="title">Декор. штукатурка</span><span class="dop"> "Короед"</span></a><br>
 <DT>16 июн: <DD><a href="/catalog/cat592.shtml" title="Новый товар"><span class="title">Лента алюминиевая</span><span class="dop"> *538*</span></a><br>
