--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,16 +1,18 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 авг : <DD><a href="/catalog/cat429.shtml" title="Новые товары"><span class="title">Валики прижимные</span><span class="dop"> HARDY</span></a><br>
+  <DT>03 авг : <DD><a href="/catalog/cat322.shtml" title="Новый товар"><span class="title">Макловица для грунтовок</span><span class="dop"></span></a><br>
+  <DT>03 авг : <DD><a href="/catalog/cat263.shtml" title="Новый товар"><span class="title">Очки защитные</span><span class="dop"> HARDY</span></a><br>
+  <DT>02 авг : <DD><a href="/catalog/cat28.shtml"  title="Новые товары"><span class="title">Диски алмазные Турбо</span><span class="dop"> GR&Ouml;NE</span></a><br>
+  <DT>02 авг : <DD><a href="/catalog/cat219.shtml" title="Новые товары"><span class="title">Плиткорезы ручные</span><span class="dop"> HARDY</span></a><br>
+  <DT>31 июл: <DD><a href="/catalog/cat191.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для монт. пены</span><span class="dop"></span></a><br>
+  <DT>31 июл: <DD><a href="/catalog/cat474.shtml" title="Новые товары"><span class="title">Ножницы обойные</span><span class="dop"> HARDY</span></a><br>
   <DT>07 июл: <DD><a href="/catalog/cat174.shtml" title="Новые товары"><span class="title">Ключи имбусовые</span><span class="dop"> GROSS</span></a><br>
   <DT>05 июл: <DD><a href="/catalog/cat554.shtml" title="Цены снижены"><span class="title">Профес. маляр. валики</span><span class="dop"> ProPlus</span></a><br>
   <DT>05 июл: <DD><a href="/catalog/cat121.shtml" title="Новые товары"><span class="title">Плоскогубцы</span><span class="dop"> BOHRER</span></a><br>
   <DT>04 июл: <DD><a href="/catalog/cat278.shtml" title="Новые товары"><span class="title">Провод гибкий</span><span class="dop"> ПВСнг(А)-LS</span></a><br>
   <DT>03 июл: <DD><a href="/catalog/cat301.shtml" title="Новые товары"><span class="title">Уровни магнитные</span><span class="dop"> HARDY</span></a><br>
   <DT>03 июл: <DD><a href="/catalog/cat591.shtml" title="Новый товар"><span class="title">Лента монтажная напольная</span><span class="dop"></span></a><br>
-  <DT>28 июн: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
-  <DT>28 июн: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
-  <DT>27 июн: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Клинья для плитки</span><span class="dop"> HARDY</span></a><br>
-  <DT>27 июн: <DD><a href="/catalog/cat562.shtml" title="Новый товар"><span class="title">Замок с автозапиранием,</span><span class="dop"> 50 мм</span></a><br>
-  <DT>26 июн: <DD><a href="/catalog/cat92.shtml"  title="Цены снижены"><span class="title">Респираторы</span><span class="dop"> Исток, У-2К, РПГ</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
